# SpyCats_CrewRedTestAssessment

./: .env  Dockerfile  README.md  alembic.ini  docker-compose.yml  postman_collection.json  pyproject.toml
alembic/: env.py
app/: main.py
app/api/routes/: cats.py  missions.py
app/core/: config.py
app/db/: session.py
app/models/: cat.py  mission.py
app/schemas/: cat.py  mission.py
app/services/: breed_validation.py
